# InteractiveBestPatches

./: .gitmodules  CMakeLists.txt  ClickableLabel.cpp  CriminisiInpainting.h  CustomImageStyle.cxx  CustomImageStyle.h  CustomTrackballStyle.cxx  CustomTrackballStyle.h  ExamplePatchDifference.cpp  Form.cxx  Form.h  Form.ui  Helpers.cpp  Helpers.h  Helpers.hxx  InteractiveBestPatches.cpp  InteractiveBestPatchesWidget.cpp  InteractiveBestPatchesWidget.h  InteractiveBestPatchesWidget.ui  Patch.cpp  Patch.h  Readme.txt  SelfPatchCompare.cpp  SelfPatchCompare.h  SwitchBetweenStyle.cxx  SwitchBetweenStyle.h  legacy.cxx
